tests/negative/neg_pr1110b_append_type_mismatch.safe
-- Test: neg_pr1110b_append_type_mismatch
-- Description: `append(items, value)` requires a value compatible with the list
--   element type.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110b-built-in-list-of-t
-- Expected: REJECT source_frontend_error

package neg_pr1110b_append_type_mismatch

   values : list of integer = [1, 2]

   append (values, "Ada")
